mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  selector:
    app: mealie
  type: LoadBalancer
  loadBalancerIP: 192.168.86.108
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
